flux/clusters/management/apps/homer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  homer
  namespace: homer
  labels:
    app:  homer
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: homer
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  homer
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name:  homer
        image:  b4bz/homer:v25.03.3
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 800m
            memory: 400Mi
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  8080
          name:  homer
        volumeMounts:
        - name: homer-config
          mountPath: /www/assets
        - name: homer-config-yml
          mountPath: /www/assets/config.yml
          subPath: config.yml
      volumes:
        - name: homer-config
          persistentVolumeClaim:
            claimName: homer-config
        - name: homer-config-yml
          configMap:
            name: config
      restartPolicy: Always
