flux/clusters/management/apps/homer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: homer
spec:
  selector:
    app: homer
  type: ClusterIP
  ports:
  - name: homer
    protocol: TCP
    port: 8080
    targetPort: 8080
